# esp-rv-baremetal-gyro-shtc3

./: Cargo.toml  README.md  README.txt
.cargo/: config.toml
examples/: fifo_p1.rs  fifo_p2.rs  fifo_p3.rs  fifo_p4.rs
src/: main.rs
